test/io/serializers/read-borrowed.good
read-borrowed.chpl:9: In function 'main':
read-borrowed.chpl:13: error: reading borrowed class types is not supported: 'borrowed C'
